--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,4 +39,12 @@
         android:layout_height="wrap_content"
         android:text="Зарегистрироваться"
         android:layout_marginTop="16dp" />
+    <TextView
+        android:id="@+id/back_to_autorize_link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Вернуться ко входу"
+        android:textColor="@color/purple_500"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp" />
 </LinearLayout>
