--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/navigation_graves"
+        android:icon="@drawable/memorial"
+        android:title="Захоронения" />
+    <item
         android:id="@+id/navigation_order"
         android:icon="@drawable/baseline_shopping_cart_24"
         android:title="Услуги" />
@@ -8,4 +12,5 @@
         android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
         android:title="Профиль" />
+
 </menu>
