--- a/app/src/main/res/layout/fragment_burials.xml
+++ b/app/src/main/res/layout/fragment_burials.xml
@@ -1,12 +1,79 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:padding="16dp">
 
+    <!-- Заголовок "Захоронения" -->
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="List of Graves"
-        android:textSize="20sp" />
-</LinearLayout>
+        android:text="Захоронения"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/roboto_black" />
+
+    <!-- Toolbar с кнопками "Мои" и "Все" -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="?attr/actionBarTheme"
+        android:elevation="4dp"
+        android:layout_below="@id/tv_title"
+        android:layout_marginBottom="16dp">
+
+        <!-- LinearLayout для распределения пространства между кнопками -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <!-- Кнопка "Мои" -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_mine"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Мои"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/purple_200"
+                app:cornerRadius="8dp"
+                android:layout_weight="1"
+                android:layout_marginStart="16dp"
+                android:layout_centerVertical="true" />
+
+            <!-- Кнопка "Все" -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_all"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Все"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/purple_300"
+                app:cornerRadius="8dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="16dp"
+                android:layout_centerVertical="true" />
+
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+    <!-- RecyclerView для отображения захоронений -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_burials"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:scrollbars="vertical"
+        android:padding="8dp"
+        android:layout_below="@id/toolbar" />
+
+</RelativeLayout>
