--- a/app/src/main/res/layout/fragment_task_choice.xml
+++ b/app/src/main/res/layout/fragment_task_choice.xml
@@ -36,7 +36,7 @@
         app:iconGravity="textStart"
         app:iconPadding="18dp"
         android:textSize="18sp"
-        android:backgroundTint="@color/teal_700"
+        android:backgroundTint="@color/purple_300"
         android:textColor="@android:color/white"
         android:padding="18dp" />
 
@@ -52,7 +52,7 @@
         app:iconSize="50dp"
         app:iconGravity="textStart"
         app:iconPadding="18dp"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/purple_200"
         android:textColor="@android:color/white"
         android:padding="16dp"
         android:layout_marginTop="32dp"/>
