--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_100">#E6C9FD</color>
+    <color name="purple_200">#A477D9</color>
+    <color name="purple_300">#8235F2</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -10,4 +12,5 @@
     <color name="background_nav">#FF6200EE</color>
     <color name="icon_color">#FFFFFF</color>
     <color name="text_color">#FFFFFF</color>
+    <color name="grey">#EBEBEB</color>
 </resources>
