--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,5 +12,8 @@
         android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
         android:title="Профиль" />
-
+    <item
+        android:id="@+id/navigation_admin"
+        android:icon="@drawable/admin"
+        android:title="Admin" />
 </menu>
