--- a/app/src/main/res/layout/fragment_burials.xml
+++ b/app/src/main/res/layout/fragment_burials.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,6 +20,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/roboto_black" />
+
+
 
     <!-- Toolbar с кнопками "Мои" и "Все" -->
     <androidx.appcompat.widget.Toolbar
@@ -68,14 +71,26 @@
                 android:layout_centerVertical="true" />
 
         </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
 
+    </androidx.appcompat.widget.Toolbar>
+    <EditText
+        android:id="@+id/et_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Введите имя для поиска"
+        android:padding="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/purple_300"
+        android:drawablePadding="8dp"
+        android:layout_below="@id/toolbar"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
     <!-- RecyclerView для отображения захоронений -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_burials"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="40dp"
         android:scrollbars="vertical"
         android:padding="8dp"
         android:layout_below="@id/toolbar" />
