--- a/app/src/main/res/layout/fragment_task_choice.xml
+++ b/app/src/main/res/layout/fragment_task_choice.xml
@@ -8,7 +8,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="У вас уже есть захоронение?"
+        android:text="У вас уже есть мемориал?"
         android:textSize="24sp"
         android:textColor="@android:color/black"
         android:layout_centerHorizontal="true"
@@ -27,7 +27,7 @@
         android:id="@+id/btn_grave_exists"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Захоронение уже есть"
+        android:text="Мемориал уже есть"
         android:layout_below="@id/title"
         android:layout_marginBottom="18dp"
         app:cornerRadius="18dp"
@@ -44,7 +44,7 @@
         android:id="@+id/btn_no_grave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Создать захоронение"
+        android:text="Создать мемориал"
         app:cornerRadius="18dp"
         android:layout_below="@id/btn_grave_exists"
         android:textSize="18sp"
