--- a/app/src/main/res/layout/fragment_task_choice.xml
+++ b/app/src/main/res/layout/fragment_task_choice.xml
@@ -23,12 +23,20 @@
         android:shadowDy="2"
         android:shadowRadius="2" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_grave_exists"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Мемориал уже есть"
-        android:layout_below="@id/title"
+        android:layout_below="@id/recyclerView"
         android:layout_marginBottom="18dp"
         app:cornerRadius="18dp"
         app:icon="@drawable/memorial"
