--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,22 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_memorials"
-        android:icon="@drawable/memorial"
-        android:title="Мемориалы" />
+        android:icon="@drawable/ic_memorial"
+        android:title="@string/title_memorials" />
+
     <item
-        android:id="@+id/navigation_trees"
+        android:id="@+id/navigation_family_trees"
         android:icon="@drawable/ic_family_tree"
-        android:title="Древо" />
+        android:title="@string/title_family_trees" />
+
     <item
         android:id="@+id/navigation_map"
         android:icon="@drawable/ic_map"
-        android:title="Карта" />
+        android:title="@string/title_map" />
+
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications"
-        android:title="Уведомления" />
+        android:title="@string/title_notifications" />
+
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/baseline_person_24"
-        android:title="Профиль" />
+        android:icon="@drawable/ic_profile"
+        android:title="@string/title_profile" />
 </menu>
