--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_100">#E6C9FD</color>
-    <color name="purple_200">#A477D9</color>
+    <color name="purple_200">#FFBB86FC</color>
     <color name="purple_300">#8235F2</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -16,5 +16,12 @@
     <color name="background_color">#F5F5F5</color> <!-- Фон для контейнера -->
     <color name="primary_text">#212121</color> <!-- Темный текст для заголовков -->
     <color name="secondary_text">#757575</color> <!-- Светлый текст для данных -->
-    <color name="red">#D32F2F</color> <!-- Цвет для кнопки выхода -->
+    <color name="red">#FF0000</color>
+    
+    <!-- Новые цвета для профиля -->
+    <color name="background">#F5F5F5</color>
+    <color name="primary">#4A6572</color>
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    <color name="error">#B00020</color>
 </resources>
